--- a/SnifferDjango/templates/base.html
+++ b/SnifferDjango/templates/base.html
@@ -119,7 +119,7 @@
     <button class="power-button"></button>
     <div class="status-bar">
         <div>
-            <img src="status-icon-1.png" alt="Иконка статуса 1">
+            <img src="{% static "images/" %}" alt="Иконка статуса 1">
             <span class="status active"></span>
         </div>
         <div>
