--- a/SnifferDjango/templates/sniffer.html
+++ b/SnifferDjango/templates/sniffer.html
@@ -3,57 +3,57 @@
 {% block title %}Главная{% endblock %}
 
 {% block content %}
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" style="color: black">Внимание</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div  class="modal-body" style="color: black">
-                    <p id="alert"></p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-                    <button type="button" class="btn btn-primary">Сохранить</button>
-                </div>
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" style="color: black">Внимание</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body" style="color: black">
+                <p id="alert"></p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                <button type="button" class="btn btn-primary">Сохранить</button>
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-4">
-            <select id="interface" class="form-select bg-dark text-white" aria-label="Default select example">
-                {% for interface in  interfaces %}
-                    <option value="{{ interface }}"> {{ interface }}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <div class="col-2">
-            <button id="start" class="btn btn-primary">Запуск</button>
-        </div>
-        <div class="col-2">
-            <button id="stop" class="btn btn-primary">Стоп</button>
-        </div>
+</div>
+<div class="row">
+    <div class="col-4">
+        <select id="interface" class="form-select bg-dark text-white" aria-label="Default select example">
+            {% for interface in interfaces %}
+            <option value="{{ interface }}"> {{ interface }}</option>
+            {% endfor %}
+        </select>
     </div>
-    <div  class="alert alert-danger col-4" role="alert" style="display: none">
+    <div class="col-2">
+        <button id="start" class="btn btn-primary">Запуск</button>
+    </div>
+    <div class="col-2">
+        <button id="stop" class="btn btn-primary">Стоп</button>
+    </div>
+</div>
+<div class="alert alert-danger col-4" role="alert" style="display: none">
 
-    </div>
-    <div style="width: 100%">
-        <table id="table" class="table table-dark">
-            <thead>
-            <th>Время получения пакета</th>
-            <th>Декодированный пакет</th>
-            <th>Сырой пакет</th>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-    </div>
+</div>
+<div style="width: 100%">
+    <table id="table" class="table table-dark">
+        <thead>
+        <th>Время получения пакета</th>
+        <th>Декодированный пакет</th>
+        <th>Сырой пакет</th>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+</div>
 
 
 {% endblock %}
 
 
 {% block scripts %}
-    <script src="{% static "js/sniff.js" %}"></script>
+<script src="{% static 'js/sniff.js' %}"></script>
 {% endblock %}
